// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: list element 1`] = `
<div>
  <List
    aria-label="project_plural"
    autoHeight={true}
    estimatedRowSize={30}
    height={200}
    isScrolling={false}
    noRowsRenderer={[Function]}
    onRowsRendered={[Function]}
    onScroll={[Function]}
    overscanIndicesGetter={[Function]}
    overscanRowCount={2}
    rowCount={2}
    rowHeight={165}
    rowRenderer={[Function]}
    scrollToAlignment="auto"
    scrollToIndex={-1}
    scrollTop={0}
    style={
      {
        "outline": "none",
      }
    }
    width={200}
  />
</div>
`;

exports[`renders correctly: row element 1`] = `
<div
  role="row"
  style={
    {
      "height": 145,
    }
  }
>
  <div
    role="gridcell"
  >
    <ProjectCard
      currentUser={
        {
          "isLoggedIn": true,
        }
      }
      height={145}
      project={
        {
          "key": "foo",
          "name": "Foo",
        }
      }
      type="overall"
    />
  </div>
</div>
`;

exports[`renders different types of "no projects" 1`] = `
<div
  className="projects-list"
>
  <withRouter(EmptyInstance)
    currentUser={
      {
        "isLoggedIn": true,
      }
    }
  />
</div>
`;

exports[`renders different types of "no projects" 2`] = `
<div
  className="projects-list"
>
  <EmptySearch />
</div>
`;

exports[`renders different types of "no projects" 3`] = `
<div
  className="projects-list"
>
  <NoFavoriteProjects />
</div>
`;
